@@ -1,6 +1,7 @@
 2009-03-13 - Sean Huber (shuber@huberry.com)
   * Add Enumerable (incomplete)
   * Update doc/TODO
+  * Add Enumerable#partition
 
 2009-03-12 - Sean Huber (shuber@huberry.com)
   * Update README
